# ChromaDB-Admin-managment

./: .dockerignore  .env.example  .gitignore  .npmignore  AUTHENTICATION_COMPLETE.md  COMMIT_SCHEDULE.md  CONTRIBUTING.md  COOKIE_AUTH_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_PRODUCTION.md  DOCKER_PUBLISH_GUIDE.md  Dockerfile  ENV_CONFIGURATION.md  FIXES_DEPLOYMENT.md  GITHUB_SETUP_INSTRUCTIONS.md  GIT_COMMIT_SUMMARY.md  HOTFIX_v1.0.7.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  NPM_PUBLISH_v1.0.5.md  PORT_CONFIGURATION.md  PRE_PUBLISH_CHECKLIST.md  PROJECT_TASKS.md  PUBLISHING_GUIDE.md  PUBLISH_STATUS_v1.0.6.md  QUICKSTART.md  QUICK_PUBLISH_GUIDE.md  README.md  RELEASE_v1.0.6.md  SETUP_CHECKLIST.md  START_HERE.md  STEP_BY_STEP_PUBLISHING.md  TIMEOUT_TROUBLESHOOTING.md  create-commits.ps1  debug-api.js  deploy-https-fix.sh  docker-compose.yml  index.html  make-commits.ps1  (+13 more)
public/: index.html
python-package/: MANIFEST.in  README.md  pyproject.toml  setup.py
python-package/src/chromadb_admin/: __init__.py  cli.py  client.py  server.py
python-package/src/chromadb_admin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-package/src/chromadb_admin/static/: asset-manifest.json  index.html  manifest.json
python-package/src/chromadb_admin/static/static/css/: main.9f2411cc.css
python-package/src/chromadb_admin/static/static/js/: main.ee32bede.js
scripts/: chromadb-dashboard.service  chromadb-tenant-server.service  deploy.sh  ec2-setup.sh  start-production.sh  start-services.sh
server/: productionServer.js  tenantFileServer.cjs
src/: App.tsx  index.css  setupProxy.js  tailwind.css  vite-env.d.ts
src/components/: APITestingPage.tsx  ChromaConnectionPage.tsx  Dashboard.tsx  DataOperations.tsx  DatabaseManagement.tsx  EndpointsPage.tsx  ErrorBoundary.tsx  SwaggerUIComponent.tsx  TenantManagement.tsx  ToggleSwitch.tsx
src/contexts/: DarkModeContext.tsx
src/services/: apiService.ts  tenantService.ts
src/types/: api.ts
src/utils/: cookieStorage.ts
